# soundshare

./: CMakeLists.txt  soundshare
src/: audio.c  audio.h  chat.c  chat.h  config.c  config.h  main.c  network.c  network.h  ping.c  ping.h  protocol.c  protocol.h  receiving.c  receiving.h  soundshare.h  streaming.c  streaming.h  ui.c  ui.h
